--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,13 @@
   <link rel="stylesheet" href="{% static 'blog/css/document.css' %}">
   <link rel="stylesheet" href="{% static 'blog/css/guest.css' %}">
   <link rel="stylesheet" href="{% static 'blog/css/etc.css' %}">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="류호윤의 개인 블로그">
+  <meta property="og:description" content="비즈니스, 기술 그리고 성장 기록을 담은 블로그입니다.">
+  <meta property="og:image" content="http://devprofessional.xyz/static/media/hoyun_logo_svg_darkver.svg">
+  <meta property="og:url" content="http://devprofessional.xyz">
   <title>Hoyun's Webpage</title>
 </head>
 <body>
