--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,24 @@
   <link rel="stylesheet" href="{% static 'blog/css/etc.css' %}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--open grpah-->
   <meta property="og:type" content="website">
   <meta property="og:title" content="류호윤의 개인 블로그">
   <meta property="og:description" content="비즈니스, 기술 그리고 성장 기록을 담은 블로그입니다.">
-  <meta property="og:image" content="http://devprofessional.xyz/static/media/hoyun_logo_svg_darkver.svg">
+  <meta property="og:image" content="http://devprofessional.xyz/static/media/statements_photo.png">
+  <meta property="og:image:width" content="630">
+  <meta property="og:image:height" content="630">
   <meta property="og:url" content="http://devprofessional.xyz">
+  <meta property="og:locale" content="ko-KR" />
+  <meta property="og:logo" content="http://devprofessional.xyz/static/media/hoyun_logo_svg_darkver.svg" />
+
+  <!--twitterCard-->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" content="http://devprofessional.xyz"/>
+  <meta name="twitter:title" content="류호윤의 개인 블로그" />
+  <meta name="twitter:description" content="비즈니스, 기술 그리고 성장 기록을 담은 블로그입니다." />
+  <meta name="twitter:image" content="http://devprofessional.xyz/static/media/statements_photo.png" />
   <title>Hoyun's Webpage</title>
 </head>
 <body>
