--- a/blog/templates/blog/resume.html
+++ b/blog/templates/blog/resume.html
@@ -13,7 +13,7 @@
 <div class='custom-hr'>
 </div>
 <div style="padding-top:20px;">
-<iframe src="{% static 'pdfs/Hoyun_resume_temp.pdf' %}" width="100%" height="600px"></iframe>
+<iframe src="{% static 'pdfs/Hoyun_resume_temp_kor.pdf' %}" width="100%" height="600px"></iframe>
 </div>
     <div style="display:flex; justify-content:center; padding-bottom:30px; padding-top:50px;">
 
