ckeditor issue and favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}"
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -116,7 +117,12 @@
               <a href="" class="text-white">SITEINFO</a>
           </div>
         </div>
+          
           <p>© 2025 류호윤. All Rights Reserved.</p>
+
+          <p class="powered-by-django">
+            <img src="https://static.djangoproject.com/img/logos/django-logo-negative.svg" alt="Django logo"> Powered by Django
+          </p>
       </div>
     </footer>
 
