--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -110,6 +110,17 @@ a {
     
 }
 
+.powered-by-django {
+  text-align: center;
+  font-size: 0.9em;
+  color: #b6b6b6;
+}
+.powered-by-django img {
+  height: 18px;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+
 .custom-hr{
     width:100%;
     height:2px;
