footer django-logo change

--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
           <p>© 2025 류호윤. All Rights Reserved.</p>
 
           <p class="powered-by-django">
-            <img src="https://static.djangoproject.com/img/logos/django-logo-negative.svg" alt="Django logo"> Powered by <a href="https://www.djangoproject.com/" target="_blank">Django</a>
+             Powered by <a href="https://www.djangoproject.com/" target="_blank"><img src="https://static.djangoproject.com/img/logos/django-logo-negative.svg" alt="Django logo"></a>
           </p>
       </div>
     </footer>
