--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% load static %}
-<h1 style="color:#003999; padding-top:50px; padding-bottom:0px;">#프로필</h1>
+<h1 style="color:#00215d; padding-top:50px; padding-bottom:0px;">#프로필</h1>
 
 <section data-aos="fade-up">
     {% include "blog/sections/profile_intro.html" %}
