--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
   
   <link rel="stylesheet" href="{% static 'blog/css/post.css' %}">
   <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'blog/css/root.css' %}">
   
   <link rel="stylesheet" href="{% static 'blog/css/main.css' %}">
   
