--- a/blog/static/blog/css/document.css
+++ b/blog/static/blog/css/document.css
@@ -6,7 +6,7 @@
 }
 
 .documents-container-item{
-    border: 2px solid #003999;
+    border: 2px solid var(--primary-color);
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
     margin: 10px;
     display: flex;
