--- a/blog/static/blog/css/guest.css
+++ b/blog/static/blog/css/guest.css
@@ -24,7 +24,7 @@
     width: 100%;
     padding: 8px;
     font-size: 1rem;
-    border: 1px solid #003999;
+    border: 1px solid var(--primary-color);
 }
 
 .form-group-action{
