--- a/blog/static/blog/css/main.css
+++ b/blog/static/blog/css/main.css
@@ -3,7 +3,7 @@
     padding-top:50px;
 }
 .profile-container{
-    background-color: white;
+    background-color: var(--linewith-dar);
     position: relative;
     z-index: 10;
     padding-bottom: 50px;
@@ -11,7 +11,7 @@
 
 .profile-container-title h1{
     font-size: 35pt;
-    color: #003999;
+    color: var(--primary-color);
     font-weight: bold;
 }
 .profile-container-desc{
