--- a/blog/templates/blog/documents.html
+++ b/blog/templates/blog/documents.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<h1 style="color:#003999; padding-top:50px;">#자료실</h1>
+<h1 style="color:#00215d; padding-top:50px;">#자료실</h1>
 <div class='custom-hr'>
 </div>
 <div style=' display:flex; justify-content: center; width:100%;'>
