--- a/blog/templates/blog/portfolio_list.html
+++ b/blog/templates/blog/portfolio_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<h1 style="color:#003999; padding-top:50px;">#프로젝트</h1>
+<h1 style="color:#00215d; padding-top:50px;">#프로젝트</h1>
 <div>
     <div class='sprofile-section-desc-text'>
         <p style='text-align:left; font-size:11pt;'>
