--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<h1 style="color:#003999; padding-top:50px;">#작성글</h1>
+<h1 style="color:#00215d; padding-top:50px;">#작성글</h1>
 <div>
     <div class='sprofile-section-desc-text'>
         
