--- a/blog/templates/blog/resume.html
+++ b/blog/templates/blog/resume.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<h1 style="color:#003999; padding-top:20px;">#이력서</h1>
+<h1 style="color:#00215d; padding-top:20px;">#이력서</h1>
 <div>
     <div class='sprofile-section-desc-text'>
         
